# pathfinder-character-after-next

./: README.md
core/: CMakeLists.txt
core/include/: AbstractModifiable.h  AbstractModifier.h  Connector.h  LinearModifier.h  Modifiable.h  StaticModifier.h  pcan.h
core/src/AbstractModifiable/: get.cxx
core/src/AbstractModifier/: modify.cxx  priority.cxx
core/src/Connector/: Connector.cxx  process.cxx
core/src/LinearModifier/: constructor.cxx  modify.cxx
core/src/Modifiable/: constructor.cxx  get.cxx
core/src/StaticModifier/: constructor.cxx  modify.cxx  priority.cxx
docs/: More.txt  PCan MVC.ods  README.md  math_notes.md  patherfinderNotes.h  pathfindercs.md
